# quote-ctp

./: CMakeLists.txt  README.md
include/: quote_client.hh  quote_processor.hh  quote_spi.hh  quote_spi.hpp
include/cmdline/: ._cmdline.h
include/ctpapi/: ThostFtdcTraderApi.h
lib/iconv/: libcharset.so.1.0.0  libiconv.so.2.6.0
lib/restclient-cpp/: librestclient-cpp.so.1.1.1
script.py/: README.md  generate_bash.py
src/: Logging.cpp  Logging.hpp  QuoteSpi.cpp  main.cc  main.cpp  quote_client.cc  quote_processor.cc  quote_spi.cc  quote_spi.cpp
